# wickra-embed

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  codeql.yml  links.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_embed.h
bindings/c/src/: lib.rs
crates/embed-bench/: Cargo.toml
crates/embed-bench/benches/: update_latency.rs
crates/embed-core/: Cargo.toml  README.md
crates/embed-core/src/: lib.rs  math.rs  ohlcv.rs  ring.rs  traits.rs
crates/embed-core/src/indicators/: atr.rs  ema.rs  mod.rs  roc.rs  rsi.rs  sma.rs
crates/embed-core/tests/: contract.rs  golden.rs  parity.rs  proptest_invariants.rs
docs/: C_ABI.md  INDICATORS.md  LATENCY.md  NO_STD.md  PARITY.md
examples/: README.md
examples/c/: CMakeLists.txt  README.md  sma_signal.c
examples/embedded/: Cargo.toml  README.md  build.rs  memory.x
examples/embedded/.cargo/: config.toml
examples/embedded/src/: main.rs
examples/host/: Cargo.toml
examples/host/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ema_update.rs  ohlc_update.rs  sma_update.rs
golden/: README.md
golden/expected/: atr14.csv  ema20.csv  roc10.csv  rsi14.csv  sma20.csv
golden/inputs/: ohlc-01.csv  prices-01.csv
