[package]
name = "embed-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Allocation-free, no_std streaming technical indicators, byte-for-byte identical to wickra-core"
categories = ["no-std::no-alloc", "embedded", "mathematics"]
keywords = ["trading", "indicators", "no-std", "embedded", "technical-analysis"]
readme = "README.md"

[features]
# `std` is on by default so `cargo test`/`cargo build` on a host are ready to go.
# Bare-metal builds use `--no-default-features`, at which point the crate is
# strictly `#![no_std]` and every f64 op that std lacks routes through `libm`.
default = ["std"]
std = []

[dependencies]
# no_std transcendental/fused f64 ops (fma, fabs, fmax). Compiled always, but
# only *called* under `not(feature = "std")` via the `math` switch point, so the
# std build never touches it.
libm = { workspace = true }

[dev-dependencies]
# Parity oracle: the std reference each no-alloc indicator is checked
# byte-for-byte against. Host-only, never linked into the bare-metal build.
wickra-core = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
